--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -9,7 +9,8 @@
 }
 body{
   font-family: 'Montserrat', sans-serif;
-  color: #313c55
+  color: #313c55;
+  /* color: rgba(27, 26, 26, 0.7); */
 }
 a{
   color: #313c55;
@@ -28,10 +29,11 @@ button{
   color: white;
   border: none;
   border-radius: 3px;
+  transition: 0.6s;
 }
 .btn:hover{
   background-color: aliceblue;
   color: #1B9C85;
-  transition: 0.2s;
+  transition: 0.6s;
 }
 
