--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -36,4 +36,8 @@ button{
   color: #1B9C85;
   transition: 0.6s;
 }
+input, textarea{
+  font-weight: 400;
+  font-family: 'Montserrat', sans-serif;
+}
 
